fixed color and alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -729,7 +729,7 @@ section,
   text-align: center;
   min-height: 75vh;
   padding-top: 250px;
-  padding-right: 30px;
+  padding-right: 40px;
 }
 
 .hero h2 {
